--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="09W-V6-OVK">
-                        <barButtonItem key="leftBarButtonItem" title="当前位置" id="hUn-Tt-JBx">
+                        <barButtonItem key="leftBarButtonItem" title="定位" id="hUn-Tt-JBx">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="cityBtnClick:" destination="BYZ-38-t0r" id="NT8-Lq-bYB"/>
@@ -383,7 +383,7 @@
                                             <constraint firstAttribute="width" constant="25" id="CVW-tY-KB8"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="邮箱/手机/用户名" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="en5-DQ-KLR">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="邮箱/手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="en5-DQ-KLR">
                                         <rect key="frame" x="35" y="10" width="270" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="HeY-fR-oLM"/>
@@ -415,7 +415,7 @@
                                             <constraint firstAttribute="height" constant="25" id="odC-hv-tnT"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xjm-8Q-mRN">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xjm-8Q-mRN">
                                         <rect key="frame" x="35" y="9" width="270" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="lBh-vh-npd"/>
@@ -509,6 +509,160 @@
             </objects>
             <point key="canvasLocation" x="-772.5" y="-524.5"/>
         </scene>
+        <!--Test View Controller-->
+        <scene sceneID="b9G-sh-2Yo">
+            <objects>
+                <viewController storyboardIdentifier="TestViewController" id="afZ-aa-27Z" customClass="TestViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4ge-d7-w4o"/>
+                        <viewControllerLayoutGuide type="bottom" id="1Mo-Gm-ric"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vpU-4e-FLt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5di-MW-dFB">
+                                <rect key="frame" x="104" y="263" width="180" height="84"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lJJ-px-zq0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1673.5" y="-1252.5"/>
+        </scene>
+        <!--Email Registe View Controller-->
+        <scene sceneID="2QU-Qw-xZp">
+            <objects>
+                <viewController storyboardIdentifier="EmailRegisteViewController" id="x6g-u3-QpS" customClass="EmailRegisteViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a3M-Ub-agk"/>
+                        <viewControllerLayoutGuide type="bottom" id="N3n-iE-CMG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nwu-0G-oSa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D7y-7u-uQh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1238.5" y="-1261.5"/>
+        </scene>
+        <!--Phone Re View Controller-->
+        <scene sceneID="TRg-Op-5i8">
+            <objects>
+                <viewController storyboardIdentifier="PhoneReViewController" id="edo-K5-R2D" customClass="PhoneReViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hXt-Qt-zk6"/>
+                        <viewControllerLayoutGuide type="bottom" id="1JY-Vv-BP7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dyx-ci-igf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bnJ-qh-eu2">
+                                <rect key="frame" x="50" y="40" width="275" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="7FK-T4-Mvr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1qy-WS-H2M">
+                                <rect key="frame" x="225" y="93" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="B3X-fD-5k0"/>
+                                    <constraint firstAttribute="height" constant="30" id="Xxi-sF-ykU"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0rg-Gh-1UW">
+                                <rect key="frame" x="50" y="90" width="165" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="SNg-bz-ItU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入短信验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dsf-JU-ZLV">
+                                <rect key="frame" x="50" y="140" width="165" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="G2b-tH-3DQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d61-P0-gJi">
+                                <rect key="frame" x="225" y="143" width="100" height="30"/>
+                                <color key="backgroundColor" red="0.16217668312385836" green="0.59663096016927086" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Wdh-tZ-XsD"/>
+                                    <constraint firstAttribute="height" constant="30" id="br5-Eg-K3u"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="获取短信验证码">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="设置登录密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CS4-Vt-dw1">
+                                <rect key="frame" x="50" y="190" width="275" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="YIg-IW-gg6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96t-wI-Ay5">
+                                <rect key="frame" x="50" y="255" width="275" height="40"/>
+                                <color key="backgroundColor" red="0.14055548079999999" green="0.36273404650000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="rlI-gs-ljP"/>
+                                </constraints>
+                                <state key="normal" title="立即注册">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBrg.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="wQR-6r-czl">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wQR-6r-czl" firstAttribute="top" secondItem="dyx-ci-igf" secondAttribute="top" id="023-Sz-ldD"/>
+                            <constraint firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" constant="50" id="1Ui-Dd-eif"/>
+                            <constraint firstItem="CS4-Vt-dw1" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="3K3-iW-8gT"/>
+                            <constraint firstItem="1qy-WS-H2M" firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" id="8Ef-ct-B34"/>
+                            <constraint firstItem="d61-P0-gJi" firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" id="8vc-Go-stF"/>
+                            <constraint firstItem="Dsf-JU-ZLV" firstAttribute="top" secondItem="0rg-Gh-1UW" secondAttribute="bottom" constant="15" id="95r-b2-XLQ"/>
+                            <constraint firstItem="Dsf-JU-ZLV" firstAttribute="leading" secondItem="bnJ-qh-eu2" secondAttribute="leading" id="9QW-7s-rNb"/>
+                            <constraint firstItem="1qy-WS-H2M" firstAttribute="top" secondItem="bnJ-qh-eu2" secondAttribute="bottom" constant="18" id="BVC-Rk-fC4"/>
+                            <constraint firstItem="d61-P0-gJi" firstAttribute="leading" secondItem="Dsf-JU-ZLV" secondAttribute="trailing" constant="10" id="Grh-kZ-afM"/>
+                            <constraint firstAttribute="trailing" secondItem="96t-wI-Ay5" secondAttribute="trailing" constant="50" id="I1P-cI-W1h"/>
+                            <constraint firstItem="1JY-Vv-BP7" firstAttribute="top" secondItem="wQR-6r-czl" secondAttribute="bottom" id="J5y-9Z-iUO"/>
+                            <constraint firstItem="d61-P0-gJi" firstAttribute="top" secondItem="Dsf-JU-ZLV" secondAttribute="top" constant="3" id="JMb-3a-89d"/>
+                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="top" secondItem="dyx-ci-igf" secondAttribute="top" constant="40" id="KJM-xD-W9a"/>
+                            <constraint firstItem="96t-wI-Ay5" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="MjC-4t-9Bs"/>
+                            <constraint firstItem="wQR-6r-czl" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" id="Ne5-95-0tg"/>
+                            <constraint firstAttribute="trailing" secondItem="CS4-Vt-dw1" secondAttribute="trailing" constant="50" id="TYX-wM-KR3"/>
+                            <constraint firstItem="96t-wI-Ay5" firstAttribute="top" secondItem="CS4-Vt-dw1" secondAttribute="bottom" constant="30" id="beM-Xv-slB"/>
+                            <constraint firstItem="CS4-Vt-dw1" firstAttribute="top" secondItem="Dsf-JU-ZLV" secondAttribute="bottom" constant="15" id="nor-Y9-d3k"/>
+                            <constraint firstItem="1qy-WS-H2M" firstAttribute="leading" secondItem="0rg-Gh-1UW" secondAttribute="trailing" constant="10" id="rDA-yZ-xpg"/>
+                            <constraint firstAttribute="trailing" secondItem="wQR-6r-czl" secondAttribute="trailing" id="rR5-J6-Mml"/>
+                            <constraint firstItem="0rg-Gh-1UW" firstAttribute="top" secondItem="bnJ-qh-eu2" secondAttribute="bottom" constant="15" id="rtU-i8-Stg"/>
+                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="v8b-eh-od2"/>
+                            <constraint firstItem="0rg-Gh-1UW" firstAttribute="leading" secondItem="bnJ-qh-eu2" secondAttribute="leading" id="xi9-3X-MFb"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fwF-6s-ayw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-772.5" y="-1261.5"/>
+        </scene>
         <!--Register View Controller-->
         <scene sceneID="Jwl-rY-viH">
             <objects>
@@ -575,7 +729,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TZQ-My-meL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-357.5" y="-524.5"/>
+            <point key="canvasLocation" x="-358.5" y="-524.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VV7-mZ-yny">
@@ -598,6 +752,7 @@
     </scenes>
     <resources>
         <image name="km_icon.png" width="12" height="14"/>
+        <image name="loginBrg.jpeg" width="700" height="1308"/>
         <image name="login_password.png" width="42" height="42"/>
         <image name="login_person.png" width="42" height="42"/>
         <image name="user_icon.png" width="13" height="14"/>
