--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -438,10 +438,10 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fVH-Mg-LuJ">
-                                <rect key="frame" x="30" y="254" width="315" height="40"/>
+                                <rect key="frame" x="30" y="254" width="315" height="45"/>
                                 <color key="backgroundColor" red="0.14055548079999999" green="0.36273404650000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Jmv-mo-9z5"/>
+                                    <constraint firstAttribute="height" constant="45" id="Jmv-mo-9z5"/>
                                 </constraints>
                                 <state key="normal" title="登录"/>
                                 <connections>
@@ -449,7 +449,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hi7-LF-tyP">
-                                <rect key="frame" x="30" y="309" width="80" height="20"/>
+                                <rect key="frame" x="30" y="314" width="80" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="QCY-lm-Nze"/>
                                     <constraint firstAttribute="height" constant="20" id="rRT-J0-cwC"/>
@@ -460,7 +460,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3FY-DU-wOU">
-                                <rect key="frame" x="270" y="309" width="75" height="20"/>
+                                <rect key="frame" x="270" y="314" width="75" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="4bj-Hg-tyd"/>
                                     <constraint firstAttribute="height" constant="20" id="fmv-jg-Wtd"/>
@@ -568,33 +568,42 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBrg.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="wQR-6r-czl">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bnJ-qh-eu2">
-                                <rect key="frame" x="50" y="40" width="275" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000000000000004" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bnJ-qh-eu2">
+                                <rect key="frame" x="40" y="50" width="295" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="7FK-T4-Mvr"/>
+                                    <constraint firstAttribute="height" constant="40" id="7FK-T4-Mvr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="edo-K5-R2D" id="o9j-sT-Kqv"/>
+                                </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0rg-Gh-1UW">
-                                <rect key="frame" x="50" y="90" width="165" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000000000000004" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="0rg-Gh-1UW">
+                                <rect key="frame" x="40" y="105" width="185" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="SNg-bz-ItU"/>
+                                    <constraint firstAttribute="height" constant="40" id="SNg-bz-ItU"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="edo-K5-R2D" id="dXt-Za-6so"/>
+                                </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入短信验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dsf-JU-ZLV">
-                                <rect key="frame" x="50" y="140" width="165" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000000000000004" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="短信验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Dsf-JU-ZLV">
+                                <rect key="frame" x="40" y="160" width="185" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="G2b-tH-3DQ"/>
+                                    <constraint firstAttribute="height" constant="40" id="G2b-tH-3DQ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="edo-K5-R2D" id="7rW-5K-5Cq"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d61-P0-gJi">
-                                <rect key="frame" x="225" y="143" width="100" height="30"/>
+                                <rect key="frame" x="235" y="165" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.16217668312385836" green="0.59663096016927086" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Wdh-tZ-XsD"/>
@@ -605,19 +614,22 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="设置登录密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CS4-Vt-dw1">
-                                <rect key="frame" x="50" y="190" width="275" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000000000000004" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="登录密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CS4-Vt-dw1">
+                                <rect key="frame" x="40" y="215" width="295" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="YIg-IW-gg6"/>
+                                    <constraint firstAttribute="height" constant="40" id="YIg-IW-gg6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="edo-K5-R2D" id="vNX-oF-rSW"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96t-wI-Ay5">
-                                <rect key="frame" x="50" y="255" width="275" height="40"/>
+                                <rect key="frame" x="40" y="285" width="295" height="45"/>
                                 <color key="backgroundColor" red="0.14055548079999999" green="0.36273404650000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="rlI-gs-ljP"/>
+                                    <constraint firstAttribute="height" constant="45" id="rlI-gs-ljP"/>
                                 </constraints>
                                 <state key="normal" title="立即注册">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -627,7 +639,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7V4-Rm-ysG">
-                                <rect key="frame" x="225" y="93" width="100" height="30"/>
+                                <rect key="frame" x="235" y="110" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Ogy-Yp-FeA"/>
                                     <constraint firstAttribute="width" constant="100" id="sZL-9U-Tc4"/>
@@ -641,33 +653,34 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wQR-6r-czl" firstAttribute="top" secondItem="dyx-ci-igf" secondAttribute="top" id="023-Sz-ldD"/>
-                            <constraint firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" constant="50" id="1Ui-Dd-eif"/>
-                            <constraint firstItem="CS4-Vt-dw1" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="3K3-iW-8gT"/>
+                            <constraint firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" constant="40" id="1Ui-Dd-eif"/>
+                            <constraint firstItem="CS4-Vt-dw1" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="40" id="3K3-iW-8gT"/>
                             <constraint firstItem="d61-P0-gJi" firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" id="8vc-Go-stF"/>
                             <constraint firstItem="Dsf-JU-ZLV" firstAttribute="top" secondItem="0rg-Gh-1UW" secondAttribute="bottom" constant="15" id="95r-b2-XLQ"/>
                             <constraint firstItem="Dsf-JU-ZLV" firstAttribute="leading" secondItem="bnJ-qh-eu2" secondAttribute="leading" id="9QW-7s-rNb"/>
                             <constraint firstItem="d61-P0-gJi" firstAttribute="leading" secondItem="Dsf-JU-ZLV" secondAttribute="trailing" constant="10" id="Grh-kZ-afM"/>
-                            <constraint firstAttribute="trailing" secondItem="96t-wI-Ay5" secondAttribute="trailing" constant="50" id="I1P-cI-W1h"/>
+                            <constraint firstAttribute="trailing" secondItem="96t-wI-Ay5" secondAttribute="trailing" constant="40" id="I1P-cI-W1h"/>
                             <constraint firstItem="1JY-Vv-BP7" firstAttribute="top" secondItem="wQR-6r-czl" secondAttribute="bottom" id="J5y-9Z-iUO"/>
-                            <constraint firstItem="d61-P0-gJi" firstAttribute="top" secondItem="Dsf-JU-ZLV" secondAttribute="top" constant="3" id="JMb-3a-89d"/>
-                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="top" secondItem="dyx-ci-igf" secondAttribute="top" constant="40" id="KJM-xD-W9a"/>
-                            <constraint firstItem="96t-wI-Ay5" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="MjC-4t-9Bs"/>
+                            <constraint firstItem="d61-P0-gJi" firstAttribute="top" secondItem="Dsf-JU-ZLV" secondAttribute="top" constant="5" id="JMb-3a-89d"/>
+                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="top" secondItem="dyx-ci-igf" secondAttribute="top" constant="50" id="KJM-xD-W9a"/>
+                            <constraint firstItem="96t-wI-Ay5" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="40" id="MjC-4t-9Bs"/>
                             <constraint firstItem="wQR-6r-czl" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" id="Ne5-95-0tg"/>
                             <constraint firstItem="7V4-Rm-ysG" firstAttribute="trailing" secondItem="bnJ-qh-eu2" secondAttribute="trailing" id="P3m-F6-uoN"/>
-                            <constraint firstAttribute="trailing" secondItem="CS4-Vt-dw1" secondAttribute="trailing" constant="50" id="TYX-wM-KR3"/>
+                            <constraint firstAttribute="trailing" secondItem="CS4-Vt-dw1" secondAttribute="trailing" constant="40" id="TYX-wM-KR3"/>
                             <constraint firstItem="7V4-Rm-ysG" firstAttribute="leading" secondItem="0rg-Gh-1UW" secondAttribute="trailing" constant="10" id="YDW-4z-Vmr"/>
                             <constraint firstItem="96t-wI-Ay5" firstAttribute="top" secondItem="CS4-Vt-dw1" secondAttribute="bottom" constant="30" id="beM-Xv-slB"/>
-                            <constraint firstItem="7V4-Rm-ysG" firstAttribute="top" secondItem="bnJ-qh-eu2" secondAttribute="bottom" constant="18" id="hgq-28-YoT"/>
+                            <constraint firstItem="7V4-Rm-ysG" firstAttribute="top" secondItem="bnJ-qh-eu2" secondAttribute="bottom" constant="20" id="hgq-28-YoT"/>
                             <constraint firstItem="CS4-Vt-dw1" firstAttribute="top" secondItem="Dsf-JU-ZLV" secondAttribute="bottom" constant="15" id="nor-Y9-d3k"/>
                             <constraint firstAttribute="trailing" secondItem="wQR-6r-czl" secondAttribute="trailing" id="rR5-J6-Mml"/>
                             <constraint firstItem="0rg-Gh-1UW" firstAttribute="top" secondItem="bnJ-qh-eu2" secondAttribute="bottom" constant="15" id="rtU-i8-Stg"/>
-                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="50" id="v8b-eh-od2"/>
+                            <constraint firstItem="bnJ-qh-eu2" firstAttribute="leading" secondItem="dyx-ci-igf" secondAttribute="leading" constant="40" id="v8b-eh-od2"/>
                             <constraint firstItem="0rg-Gh-1UW" firstAttribute="leading" secondItem="bnJ-qh-eu2" secondAttribute="leading" id="xi9-3X-MFb"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="buttonGetMessage" destination="d61-P0-gJi" id="u1b-x7-Odo"/>
+                        <outlet property="buttonRegiste" destination="96t-wI-Ay5" id="Arm-sn-iL5"/>
                         <outlet property="buttonYzmImg" destination="7V4-Rm-ysG" id="UBG-fC-dca"/>
                         <outlet property="textMessage" destination="Dsf-JU-ZLV" id="RIf-GN-xd4"/>
                         <outlet property="textPhoneNumber" destination="bnJ-qh-eu2" id="Oq4-Vx-KjJ"/>
