--- a/TyDtk/NotesViewController.xib
+++ b/TyDtk/NotesViewController.xib
@@ -35,7 +35,7 @@
                             </connections>
                         </segmentedControl>
                     </subviews>
-                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="Fn6-Mh-scr"/>
                         <constraint firstItem="mHH-mH-WbP" firstAttribute="centerX" secondItem="lar-zD-dqq" secondAttribute="centerX" id="Yr3-Ik-ZFM"/>
